<resources>
    <string name="app_name">Test</string>
    <string name="reaction_speed">Speed Reaction</string>
    <string name="net_size">розмір сітки</string>
    <string name="timer">таймер</string>
    <string name="change_frequency">частота зміни</string>
    <string name="confirm">Confirm</string>
    <string name="finish">Finish</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="watch_history">Watch History</string>
    <string name="title_activity_for_watching_history">ForWatchingHistoryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back">Back</string>
</resources>