<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parameters"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightSteelBlue"
    tools:context=".ParametersActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        >


<!--        <androidx.fragment.app.FragmentContainerView-->
<!--            android:id="@+id/fragmentContainer"-->
<!--            android:layout_width="200dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:visibility="invisible"/>-->

    </androidx.constraintlayout.widget.ConstraintLayout>







    <TextView
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:text="@string/net_size"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_gravity="top|center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        />
    <Spinner
        android:id="@+id/matrix_size"
        android:gravity="center"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:textSize="30sp"
        android:layout_gravity="top|center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="90dp" />

    <TextView
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:text="@string/timer"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_gravity="top|center"
        android:layout_marginEnd="90dp"
        android:layout_marginTop="80dp"
        />
    <Spinner
        android:id="@+id/timer"
        android:gravity="center"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:textSize="30sp"
        android:layout_gravity="top|center"
        android:layout_marginStart="90dp"
        android:layout_marginTop="80dp"/>

    <TextView
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:text="@string/change_frequency"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_gravity="top|center"
        android:layout_marginEnd="90dp"
        android:layout_marginTop="140dp"
        />
    <Spinner
        android:id="@+id/speed_range"
        android:gravity="center"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:textSize="30sp"
        android:layout_gravity="top|center"
        android:layout_marginStart="90dp"
        android:layout_marginTop="140dp"/>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/confirm"
        android:textSize="33sp"

        android:layout_gravity="top|center"
        android:layout_marginTop="200dp"
        />
    <Button
        android:id="@+id/history"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/watch_history"
        android:textSize="25sp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:background="@color/black"
        />



</FrameLayout>
